--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -46,10 +46,12 @@ header  {
 .banner {
   background-color: rgb(225, 234, 234);
 }
+
 .banner .image img {
   margin: 2rem 5.5rem 2rem 1.5rem;
   width: 65%;
 }
+
 .banner .article {
   flex: 1;
   text-align: left;
@@ -58,4 +60,20 @@ header  {
 .article h1 {
   font-size: 3rem;
   font-weight: bold;
+  margin: 2rem 1rem;
+}
+
+.article h2 {
+  font-size: 2rem;
+  margin: 2rem 1rem;
+}
+
+.banner .button {
+  background-color: rgb(63, 90, 90);
+  color: rgb(255, 255, 255);
+  margin: 2rem 1rem;
+}
+
+.banner .button span {
+  margin: 0.5rem 2rem;
 }
