--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -15,6 +15,20 @@ body {
   align-items: center;
 }
 
+.flexcontent1 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.flexcontent2 {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  align-items: center;
+}
+
 .flex {
   display: flex;
   align-items: center;
@@ -45,17 +59,23 @@ header  {
   background-color: rgb(225, 234, 234);
 }
 
+.banner .image {
+  width: 55%;
+  margin-right: 1.25rem;
+}
+
 .banner .image img {
   margin: 2rem 2.5rem 2rem 1.5rem;
-  width: 65%;
+  width: 100%;
 }
 
 .banner .article {
-  width: 45%;
+  width: 35%;
   text-align: left;
+  margin-left: 1.25rem;
 }
 
-.article h1 {
+.article h1, .teasertext h1 {
   font-size: 3rem;
   font-weight: bold;
   margin: 2rem 0rem;
@@ -68,13 +88,73 @@ header  {
 
 .banner .button {
   background-color: rgb(63, 90, 90);
-  color: rgb(255, 255, 255);
+  color: rgb(255, 240, 255);
   margin: 2rem 0rem;
+  padding: 0.5rem 6rem;
   height: 2.5rem;
+  width: 35%;
 }
 
 .banner .button span {
   margin: 0.5rem 2rem;
-  padding: 0.5rem 1rem;
   text-align: center;
+}
+
+.element {
+  width: 55%;
+}
+
+.element .teaserimage img {
+  margin: 2rem 2.5rem 2rem 1.5rem;
+  width: 100%;
+}
+
+.teasertext h2 {
+  font-size: 1.5rem;
+  margin-left: 1.5rem;
+}
+
+.teasertext h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-left: 1.5rem;
+}
+
+.teasertext h4 {
+  font-size: 1rem;
+  margin-left: 1.5rem;
+  margin-top: 0.5rem;
+}
+
+.bites {
+  width: 40%;
+  text-align: left;
+  margin-left: 2rem;
+}
+
+.bites .biteimage img {
+  width: 55%;
+  margin: 2rem;
+}
+
+.bites .bitetext {
+  margin-left: 1rem;
+}
+
+.bites .bitetext h2 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.bites .bitetext h3 {
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+}
+
+.bites .bitetext h4 a {
+  font-size: 1.1rem;
+  margin-bottom: 0.5rem;
+  text-decoration: none;
+  color: rgb(0, 153, 255);
 }
