--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -121,7 +121,7 @@ header  {
   margin-left: 1.5rem;
 }
 
-.teasertext h1, .program h1 {
+.teasertext h1 {
   font-size: 2.5rem;
   font-weight: bold;
   margin-left: 1.5rem;
@@ -153,13 +153,13 @@ header  {
   margin-left: 1rem;
 }
 
-.bites .bitetext h2 {
+.bites .bitetext h2, .course h2, .videotext h2, .exhibittext h2 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   font-weight: bold;
 }
 
-.bites .bitetext h3 {
+.bites .bitetext h3, .course h3, .videotext h3, .exhibittext h3 {
   font-size: 1.1rem;
   margin-bottom: 0.5rem;
 }
@@ -181,9 +181,12 @@ header  {
   background-color: rgb(225, 234, 234);
 }
 
-.program h1 {
+.program h1, .thesis h1 {
   padding-top: 2rem;
-  padding-bottom: 2rem;
+  margin-bottom: 2rem;
+  text-align: center;
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
 .course {
@@ -197,4 +200,38 @@ header  {
 
 .coursetext {
   background-color: rgb(255, 255, 255);
+  height: 10rem;
+}
+
+.course h2 {
+  padding-top: 1rem;
+  margin-left: 1rem;
+}
+
+.course h3 {
+  font-size: 1.1rem;
+  margin-top: 0.5rem;
+  margin-left: 1rem;
+}
+
+.video {
+  width: 55%;
+  margin-left: 1.5rem;
+  margin-right: 1rem;
+  margin-bottom: 1.5rem;
+}
+
+.screen video {
+  width: 100%;
+  margin-bottom: 1.5rem;
+}
+
+.exhibit {
+  height: 16rem;
+  width: 40%;
+}
+
+.exhibitimage img {
+  margin: 1rem;
+  width: 60%;
 }
