--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -145,7 +145,17 @@ header  {
   margin-left: 2rem;
 }
 
-.bites .biteimage img{
+.thesisimage {
+  width: 35%;
+  margin-top: 2rem;
+  margin-left: 2rem;
+}
+
+.thesisimage img {
+  width: 100%;
+}
+
+.bites .biteimage img {
   width: 100%;
 }
 
@@ -153,13 +163,17 @@ header  {
   margin-left: 1rem;
 }
 
-.bites .bitetext h2, .course h2, .videotext h2, .exhibittext h2 {
+.thesistext {
+  margin-left: 1rem;
+}
+
+.bites .bitetext h2, .course h2, .videotext h2 {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   font-weight: bold;
 }
 
-.bites .bitetext h3, .course h3, .videotext h3, .exhibittext h3 {
+.bites .bitetext h3, .course h3, .videotext h3 {
   font-size: 1.1rem;
   margin-bottom: 0.5rem;
 }
@@ -226,12 +240,19 @@ header  {
   margin-bottom: 1.5rem;
 }
 
-.exhibit {
-  height: 16rem;
-  width: 40%;
+footer {
+    border-top: 1px solid rgb(225, 234, 234);
 }
 
-.exhibitimage img {
-  margin: 1rem;
-  width: 60%;
+footer span {
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+}
+
+footer span a {
+  margin-right: 0.5rem;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
 }
