--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,12 @@
+@media only screen and (min-width: 1024px) {
+  .mobile {display: none;}
+}
+
+@media only screen and (max-width: 1024px) {
+  .desktop {display: none;}
+}
+
+
 html {
   font-size: 16px;
   line-height: 1.4;
@@ -88,11 +97,6 @@ header  {
   margin: 2rem 0rem;
 }
 
-.article h2 {
-  font-size: 2rem;
-  margin: 2rem 0rem;
-}
-
 .banner .button {
   background-color: rgb(63, 90, 90);
   color: rgb(255, 240, 255);
@@ -145,25 +149,11 @@ header  {
   margin-left: 2rem;
 }
 
-.thesisimage {
-  width: 35%;
-  margin-top: 2rem;
-  margin-left: 2rem;
-}
-
-.thesisimage img {
-  width: 100%;
-}
-
 .bites .biteimage img {
   width: 100%;
 }
 
 .bites .bitetext {
-  margin-left: 1rem;
-}
-
-.thesistext {
   margin-left: 1rem;
 }
 
